compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__module_private_type_leak_4.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 846
expression: "type PrivateType\n@external(erlang, \"a\", \"b\")\npub fn go(x: PrivateType) -> Int"
snapshot_kind: text
---
----- SOURCE CODE
type PrivateType
@external(erlang, "a", "b")
pub fn go(x: PrivateType) -> Int

----- ERROR
error: Private type used in public interface
  ┌─ /src/one/two.gleam:3:1
  │
3 │ pub fn go(x: PrivateType) -> Int
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^

The following type is private, but is being used by this public export.

    PrivateType

Private types can only be used within the module that defines them.
